--- a/frontend/src/templates/index.html
+++ b/frontend/src/templates/index.html
@@ -17,7 +17,7 @@
             <div class="emotion-display">
                 <i class="fas fa-heart-pulse"></i>
                 <span>Emozione: </span>
-                <span id="emotion-label" class="neutrale">neutrale</span>
+                <span id="emotion-label" class="neutro">neutro</span>
             </div>
         </div>
 
