enviroment-classifier implementation

--- a/frontend/src/templates/index.html
+++ b/frontend/src/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chatbot Emotivo</title>
+    <title>Emotive Chatbot</title>
     <link rel="stylesheet" href="{{ url_for('static', path='/css/style.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,7 +13,7 @@
 <body>
     <div class="chat-container">
         <div class="chat-header">
-            <h1><i class="fas fa-robot"></i> Chatbot Emotivo</h1>
+            <h1><i class="fas fa-robot"></i> Emotive Chatbot</h1>
             <div class="emotion-display">
                 <i class="fas fa-heart-pulse"></i>
                 <span>Emozione: </span>
